# upico

./: .gitignore  .gitmodules  Cargo.toml  install.sh  readme.md
.github/workflows/: build.yml
app/: Cargo.toml  readme.md  upico.service
app/src/: app.rs  gpio.rs  main.rs  pinout.ansi  service.rs
docs/: ibom.html  upico.d2
drivers/r-01/: uc_board.dts  upico.service
extender/: Cargo.toml
extender/.cargo/: config.toml
extender/src/: main.rs  upico.rs
fab/: cover.scad  cover.stl
pcb/: USON-8_2x3mm_P0.5mm.kicad_mod  USON-8_4x3mm_P0.8mm.kicad_mod  ext.kicad_mod  fp-lib-table  mini-PCIe.kicad_mod  speaker.kicad_mod  sym-lib-table  upico.bak  upico.kicad_pcb  upico.kicad_prl  upico.kicad_pro  upico.kicad_sch  upico.kicad_sym
pcb/bom/: ibom.html
src/: config.rs  extender.rs  gpio.rs  main.rs  pinout.ansi  service.rs
src/resources/: extender.uf2  pinout_full.ansi
