[package]
name = "upico"
version = "0.1.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
repository = "https://github.com/dotcypress/upico"
description = "uPico control app"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
clap = "4.4.6"
clap_complete = "4.5.2"
rmp-serde = "1.1.2"
rusb = "0.9"
serde = { version = "1.0.188", features = ["serde_derive"] }

[features]
default = ["cm4"]
r01 = []
cm4 = []
a06 = []
a04 = []

[profile.release]
strip = true

[package.metadata.cross.target.riscv64gc-unknown-linux-gnu]
image = "ghcr.io/cross-rs/riscv64gc-unknown-linux-gnu:0.2.4"

[package.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "ghcr.io/cross-rs/armv7-unknown-linux-musleabihf:0.2.4"
